--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -26,6 +26,7 @@ jobs:
       GH_TOKEN: ${{ secrets.GH_TOKEN}}
       CSC_LINK: ${{ secrets.CSC_LINK}}
       CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD}}
+      CI: true
 
     steps:
       - uses: actions/checkout@v2
@@ -43,6 +44,8 @@ jobs:
     runs-on: windows-latest
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN}}
+      CSC_LINK: ${{ secrets.CSC_LINK}}
+      CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD}}
 
     steps:
       - uses: actions/checkout@v2
