--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "homepage": "https://github.com/DeFiCh/app",
   "publicPath": "./",
-  "ainVersion": "1.3.17rc3",
+  "ainVersion": "1.3.17",
   "scripts": {
     "init": "npm ci && cd webapp && npm run init",
     "transpile": "tsc --p tsconfig.json && tspr --tsConfig tsconfig.json",
@@ -89,9 +89,9 @@
     "@types/ini": "^1.3.30",
     "@types/node": "^12.19.12",
     "@types/random-string": "0.0.28",
-    "@types/utf8": "^2.1.6",    
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
+    "@types/utf8": "^2.1.6",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "@uqt/ts-path-replace": "1.1.1",
     "babel-preset-env": "^1.7.0",
     "concurrently": "5.3.0",
@@ -114,9 +114,8 @@
   "build": {
     "productName": "defi-app",
     "appId": "com.defichain.defi-app",
-    "copyright": "Copyright © 2020 ${author}",
+    "copyright": "Copyright © 2020-2021 ${author}",
     "asar": true,
-    "afterSign": "electron-app/assets/notarize.js",
     "files": [
       "./electron-app/build",
       {
@@ -134,7 +133,6 @@
     ],
     "icon": "electron-app/assets/icon/icon-512.png",
     "dmg": {
-      "sign": false,
       "icon": "electron-app/assets/icon/mac/app.icns",
       "contents": [
         {
@@ -154,15 +152,6 @@
     },
     "win": {
       "target": "NSIS"
-    },
-    "mac": {
-      "category": "public.app-category.finance",
-      "target": ["dmg"],
-      "type": "distribution",
-      "hardenedRuntime": true,
-      "entitlements": "electron-app/assets/entitlements.mac.plist",
-      "entitlementsInherit": "electron-app/assets/entitlements.mac.plist",
-      "gatekeeperAssess": false
     },
     "publish": {
       "provider": "github",
