--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@types/base-64": "^0.1.3",
     "@types/crypto-js": "^4.0.1",
     "@types/ini": "^1.3.30",
-    "@types/node": "^12.19.12",
+    "@types/node": "^12.19.13",
     "@types/random-string": "0.0.28",
     "@types/utf8": "^2.1.6",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
@@ -96,7 +96,7 @@
     "babel-preset-env": "^1.7.0",
     "concurrently": "5.3.0",
     "cross-env": "7.0.3",
-    "electron": "^11.1.1",
+    "electron": "11.1.1",
     "electron-builder": "^22.9.1",
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "1.0.0",
