--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
       "provider": "github",
       "repo": "app",
       "owner": "DeFiCh",
-      "releaseType": "prerelease"
+      "releaseType": "release"
     }
   },
   "lint-staged": {
