--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -3,6 +3,7 @@ on:
     branches:
       - 'ci/**'
       - master
+      - feat/console_updates
 jobs:
   build_linux_version:
     runs-on: ubuntu-latest
@@ -45,6 +46,8 @@ jobs:
     runs-on: windows-latest
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN}}
+      CSC_LINK: ${{ secrets.CSC_LINK}}
+      CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD}}
     steps:
       - uses: actions/checkout@v2
       - name: Get App Version
