--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -139,11 +139,11 @@ jobs:
         uses: dsaltares/fetch-gh-release-asset@master
         with:
           version: 'tags/v${{ env.PACKAGE_VERSION}}'
-          file: './defi-app Setup ${{ env.PACKAGE_VERSION}}.exe'
+          file: './defi-app-Setup-${{ env.PACKAGE_VERSION}}.exe'
           token: ${{ secrets.GH_TOKEN}}
       - name: Generate SHA256 checksum
         run: |
-          sha256sum ./defi-app Setup ${{ env.PACKAGE_VERSION}}.exe > ./defi-app Setup ${{ env.PACKAGE_VERSION}}.exe.SHA256
+          sha256sum ./defi-app-Setup-${{ env.PACKAGE_VERSION}}.exe > ./defi-app-Setup-${{ env.PACKAGE_VERSION}}.exe.SHA256
       - name: Get Release Info with Tag Name
         id: latest_release_info
         uses: leahlundqvist/get-release@v1.3.1
@@ -155,6 +155,6 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.latest_release_info.outputs.upload_url }}
-          asset_path: ./defi-app Setup ${{ env.PACKAGE_VERSION}}.exe.SHA256
-          asset_name: defi-app Setup ${{ env.PACKAGE_VERSION}}.exe.SHA256
+          asset_path: ./defi-app-Setup-${{ env.PACKAGE_VERSION}}.exe.SHA256
+          asset_name: defi-app-Setup-${{ env.PACKAGE_VERSION}}.exe.SHA256
           asset_content_type: text/plain
