--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -39,7 +39,7 @@ jobs:
           token: ${{ secrets.GH_TOKEN}}
       - name: Generate SHA256 checksum
         run: |
-          sha256sum defi-app-${{ env.PACKAGE_VERSION}}.AppImage
+          shasum -a 256 defi-app-${{ env.PACKAGE_VERSION}}.AppImage
       - name: Get Release Info with Tag Name
         id: latest_release_info
         uses: leahlundqvist/get-release@v1.3.1
