--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -35,7 +35,7 @@ jobs:
         uses: dsaltares/fetch-gh-release-asset@master
         with:
           version: 'tags/v${{ env.PACKAGE_VERSION}}'
-          file: './defi-app-${{ env.PACKAGE_VERSION}}.AppImage'
+          file: 'defi-app-${{ env.PACKAGE_VERSION}}.AppImage'
       - name: Get Release Info with Tag Name
         id: latest_release_info
         uses: leahlundqvist/get-release@v1.3.1
@@ -43,13 +43,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: 'v${{ env.PACKAGE_VERSION}}'
-          token: ${{ secrets.GH_TOKEN}}
       - name: Generate SHA256 checksum
         run: |
           ls
-          sha256sum ./defi-app-${{ env.PACKAGE_VERSION}}.AppImage
-      - name: Print directory
-        run: ls
+          sha256sum defi-app-${{ env.PACKAGE_VERSION}}.AppImage
       # - name: Upload checksum - Linux
       #   uses: actions/upload-release-asset@v1
       #   with:
