--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -35,7 +35,7 @@ jobs:
         uses: dsaltares/fetch-gh-release-asset@master
         with:
           version: 'tags/v${{ env.PACKAGE_VERSION}}'
-          file: 'defi-app-${{ env.PACKAGE_VERSION}}.AppImage'
+          file: './defi-app-${{ env.PACKAGE_VERSION}}.AppImage'
       - name: Get Release Info with Tag Name
         id: latest_release_info
         uses: leahlundqvist/get-release@v1.3.1
@@ -47,6 +47,7 @@ jobs:
         run: |
           ls
           sha256sum defi-app-${{ env.PACKAGE_VERSION}}.AppImage
+          sha256sum package.json
       # - name: Upload checksum - Linux
       #   uses: actions/upload-release-asset@v1
       #   with:
