--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           repository: 'DeFiCh/app'
           tag: 'v${{ env.PACKAGE_VERSION}}'
-          file: './defi-app-${{ env.PACKAGE_VERSION}}.AppImage'
+          file: 'defi-app-${{ env.PACKAGE_VERSION}}.AppImage'
       - name: Get Release Info with Tag Name
         id: latest_release_info
         uses: leahlundqvist/get-release@v1.3.1
