build: removed duplicated commands

--- a/package.json
+++ b/package.json
@@ -26,19 +26,17 @@
     "pre:build:linux": "sh pre-build-linux.sh $npm_package_ainVersion",
     "pre:build:mac": "sh pre-build-mac.sh $npm_package_ainVersion",
     "pre:build:win": "pre-build-win.cmd %npm_package_ainVersion%",
-    "build": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder",
-    "build:all": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder -mwl",
-    "build:linux": "npm run pre:build:linux && npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder --linux -p never",
-    "build:mac": "npm run pre:build:mac && npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder --mac -p never",
-    "build:win": "npm run pre:build:win && npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder --win -p never",
-    "pack": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder --dir",
+    "build:electron": "npm run build:react && npm run transpile:prod && npm run set_env:prod",
+    "build": "npm run build:electron && electron-builder",
+    "build:all": "npm run build:electron && electron-builder -mwl",
+    "build:linux": "npm run pre:build:linux && npm run build:electron && electron-builder --linux -p never",
+    "build:mac": "npm run pre:build:mac && npm run build:electron && electron-builder --mac -p never",
+    "build:win": "npm run pre:build:win && npm run build:electron && electron-builder --win -p never",
+    "pack": "npm run build:electron && electron-builder --dir",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "lint:webapp": "tslint -p webapp/tsconfig.json -c tslint.json",
     "postinstall": "electron-builder install-app-deps",
     "publish": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder build -p always",
-    "publish:linux": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder build -p always",
-    "publish:mac": "npm run build:react && npm run transpile:prod && npm run set_env:prod && electron-builder build -p always",
-    "publish:win": "npm run build:react && npm run transpile:prod && npm run set_env:prod & electron-builder build -p always",
     "test:react": "cd webapp/ && npm run test",
     "test:react:snapshot": "cd webapp/ && npm run test:snapshot:update",
     "test": "echo \"Error: no test specified\" && exit 1",
