--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -18,7 +18,7 @@ jobs:
         run: npm run pre:build:linux
 
       - name: Publish app
-        run: npm run publish:linux
+        run: npm run publish
 
   create-linux-checksum:
     needs:
@@ -72,7 +72,7 @@ jobs:
         run: npm run pre:build:mac
 
       - name: Publish app
-        run: npm run publish:mac
+        run: npm run publish
 
   create-mac-checksum:
     needs:
@@ -123,7 +123,7 @@ jobs:
         run: npm run pre:build:win
 
       - name: Publish app
-        run: npm run publish:win
+        run: npm run publish
 
   create-windows-checksum:
     needs:
