--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-app",
-  "version": "2.1.10",
+  "version": "",
   "description": "DeFi Blockchain App",
   "author": {
     "name": "DeFiChain Foundation",
