--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -3,6 +3,9 @@ on:
     branches:
       - 'ci/**'
       - master
+  pull_request:
+    branches:
+      - master
 jobs:
   build_linux_version:
     runs-on: ubuntu-latest
