--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,12 +30,12 @@
     }
   },
   "dependencies": {
-    "@storybook/addon-actions": "^6.1.14",
-    "@storybook/addon-docs": "^6.1.14",
-    "@storybook/addon-links": "^6.1.14",
-    "@storybook/addons": "^6.1.14",
-    "@storybook/react": "^6.1.14",
-    "ajv": "^7.0.3",
+    "@storybook/addon-actions": "^6.1.16",
+    "@storybook/addon-docs": "^6.1.16",
+    "@storybook/addon-links": "^6.1.16",
+    "@storybook/addons": "^6.1.16",
+    "@storybook/react": "^6.1.16",
+    "ajv": "^7.0.4",
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
@@ -71,9 +71,10 @@
     "react-redux-i18n": "^1.9.3",
     "react-router-dom": "^5.2.0",
     "react-simple-maps": "^2.3.0",
-    "reactstrap": "^8.8.1",
+    "reactstrap": "^8.9.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "semver": "7.3.4",
     "shuffle-array": "^1.0.1",
     "uid": "^2.0.0",
     "uifx": "^2.0.7"
@@ -102,13 +103,14 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
     "@types/react-qr-reader": "^2.1.3",
-    "@types/react-redux": "^7.1.15",
+    "@types/react-redux": "^7.1.16",
     "@types/react-redux-i18n": "0.0.11",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-transition-group": "^4.4.0",
     "@types/redux-logger": "^3.0.8",
+    "@types/semver": "7.3.4",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
-    "autoprefixer": "^10.2.3",
+    "autoprefixer": "^10.2.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "buffer": "6.0.3",
@@ -121,7 +123,7 @@
     "cssnano": "~4.1.10",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
-    "eslint": "^7.18.0",
+    "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "~14.2.1",
     "eslint-config-airbnb-typescript": "~12.0.0",
     "eslint-config-prettier": "~7.2.0",
@@ -134,7 +136,7 @@
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "~6.1.0",
     "html-loader": "~1.3.2",
-    "html-webpack-plugin": "~5.0.0-beta.5",
+    "html-webpack-plugin": "~5.0.0-beta.6",
     "image-minimizer-webpack-plugin": "2.2.0",
     "imagemin-jpegtran": "7.0.0",
     "imagemin-optipng": "8.0.0",
@@ -142,30 +144,30 @@
     "import-sort-style-module-and-prefix": "~0.1.3",
     "install": "^0.13.0",
     "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.3.4",
+    "mini-css-extract-plugin": "^1.3.5",
     "npm": "^6.14.11",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "path": "~0.12.7",
     "postcss": "8.2.4",
-    "postcss-loader": "^4.1.0",
+    "postcss-loader": "^4.2.0",
     "prettier": "^2.2.1",
     "process": "0.11.10",
     "react-refresh": "^0.9.0",
     "react-test-renderer": "^17.0.1",
     "regenerator-runtime": "~0.13.7",
     "resolve-url-loader": "3.1.2",
-    "sass": "1.32.4",
+    "sass": "1.32.6",
     "sass-loader": "^10.1.1",
     "stream-browserify": "3.0.0",
     "style-loader": "~2.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^26.5.0",
     "ts-loader": "^8.0.14",
     "tsconfig-paths-webpack-plugin": "3.3.0",
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
-    "webpack": "5.16.0",
-    "webpack-bundle-analyzer": "~4.3.0",
+    "webpack": "5.19.0",
+    "webpack-bundle-analyzer": "~4.4.0",
     "webpack-cli": "4.4.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
