--- a/webapp/package.json
+++ b/webapp/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^17.0.1",
     "react-ellipsis-text": "1.2.1",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "6.15.1",
     "react-icons": "^4.1.0",
     "react-md-spinner": "^1.0.0",
     "react-number-format": "4.4.4",
@@ -80,17 +81,17 @@
     "uifx": "^2.0.7"
   },
   "devDependencies": {
-    "@babel/core": "~7.12.10",
-    "@babel/plugin-proposal-class-properties": "~7.12.1",
-    "@babel/plugin-proposal-export-default-from": "^7.12.1",
-    "@babel/plugin-proposal-export-namespace-from": "~7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "~7.12.1",
-    "@babel/plugin-proposal-throw-expressions": "~7.12.1",
+    "@babel/core": "~7.12.13",
+    "@babel/plugin-proposal-class-properties": "~7.12.13",
+    "@babel/plugin-proposal-export-default-from": "^7.12.13",
+    "@babel/plugin-proposal-export-namespace-from": "~7.12.13",
+    "@babel/plugin-proposal-object-rest-spread": "~7.12.13",
+    "@babel/plugin-proposal-throw-expressions": "~7.12.13",
     "@babel/plugin-syntax-dynamic-import": "~7.8.3",
-    "@babel/plugin-transform-runtime": "~7.12.10",
-    "@babel/preset-env": "~7.12.11",
-    "@babel/preset-react": "~7.12.10",
-    "@babel/register": "~7.12.10",
+    "@babel/plugin-transform-runtime": "~7.12.13",
+    "@babel/preset-env": "~7.12.13",
+    "@babel/preset-react": "~7.12.13",
+    "@babel/register": "~7.12.13",
     "@pmmmwh/react-refresh-webpack-plugin": "~0.4.3",
     "@reduxjs/toolkit": "^1.5.0",
     "@storybook/preset-typescript": "^3.0.0",
@@ -98,7 +99,7 @@
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.1",
     "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
@@ -149,7 +150,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "path": "~0.12.7",
     "postcss": "8.2.4",
-    "postcss-loader": "^4.2.0",
+    "postcss-loader": "^5.0.0",
     "prettier": "^2.2.1",
     "process": "0.11.10",
     "react-refresh": "^0.9.0",
@@ -166,9 +167,9 @@
     "tsconfig-paths-webpack-plugin": "3.3.0",
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
-    "webpack": "5.19.0",
+    "webpack": "5.20.0",
     "webpack-bundle-analyzer": "~4.4.0",
-    "webpack-cli": "4.4.0",
+    "webpack-cli": "4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
   }
