--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -28,6 +28,8 @@ jobs:
     runs-on: macos-latest
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN}}
+      CSC_LINK: ${{ secrets.CSC_LINK}}
+      CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD}}
       CI: true
     steps:
       - uses: actions/checkout@v2
