--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -61,6 +61,8 @@ jobs:
       CSC_LINK: ${{ secrets.CSC_LINK}}
       CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD}}
       CI: true
+      APPLE_ID: ${{ secrets.APPLE_ID}}
+      APPLE_ID_PASS: ${{ secrets.APPLE_ID_PASS}}
 
     steps:
       - uses: actions/checkout@v2
