--- a/electron-app/assets/entitlements.mac.plist
+++ b/electron-app/assets/entitlements.mac.plist
@@ -6,6 +6,10 @@
     <true/>
     <key>com.apple.security.cs.allow-jit</key>
     <true/>
+    <key>com.apple.security.cs.disable-executable-page-protection</key>
+    <true/>
+    <key>com.apple.security.cs.allow-dyld-environment-variables</key>
+    <true/>
     <key>com.apple.security.cs.disable-library-validation</key>
     <true/>
     <key>com.apple.security.files.user-selected.read-write</key>
