--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -41,11 +41,10 @@ jobs:
         run: npm cache clean --force && npm run init
       - name: Build app
         run: npm run build:mac
-      - name: Tar Files
-        run: tar -cvf dist/mac-build.tar dist/defi-app-${{ env.PACKAGE_VERSION}}.dmg
       - uses: actions/upload-artifact@v2
         with:
-          path: dist/mac-build.tar
+          name: mac-build
+          path: 'dist/defi-app-${{ env.PACKAGE_VERSION}}.dmg'
 
   # build_windows_version:
   #   runs-on: windows-latest
