fix: added few permissions

--- a/electron-app/assets/entitlements.mac.plist
+++ b/electron-app/assets/entitlements.mac.plist
@@ -12,6 +12,10 @@
     <true/>
     <key>com.apple.security.cs.disable-library-validation</key>
     <true/>
+    <key>com.apple.security.network.server</key>
+    <true/>
+    <key>com.apple.security.network.client</key>
+    <true/>
     <key>com.apple.security.files.user-selected.read-write</key>
     <true/>
     <key>com.apple.developer.aps-environment</key>
