build: updated mac options

--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     ],
     "icon": "electron-app/assets/icon/icon-512.png",
     "dmg": {
+      "sign": false,
       "icon": "electron-app/assets/icon/mac/app.icns",
       "contents": [
         {
@@ -154,13 +155,9 @@
       "target": "NSIS"
     },
     "mac": {
-      "category": "public.app-category.finance",
       "target": ["dmg"],
-      "type": "distribution",
       "hardenedRuntime": true,
-      "entitlements": "electron-app/assets/entitlements.mac.plist",
-      "entitlementsInherit": "electron-app/assets/entitlements.mac.plist",
-      "gatekeeperAssess": false
+      "entitlements": "electron-app/assets/entitlements.mac.plist"
     },
     "publish": {
       "provider": "github",
