Added new packages

--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "async": "3.2.0",
     "auto-launch": "^5.0.5",
     "axios": "^0.21.1",
-    "async": "3.2.0",
     "base-64": "^1.0.0",
     "bignumber.js": "^9.0.1",
     "bip32": "^2.0.6",
@@ -70,12 +70,13 @@
     "lodash": "^4.17.20",
     "loglevel": "^1.7.1",
     "os": "^0.1.1",
+    "os-name": "4.0.0",
     "pretty-quick": "^3.1.0",
     "prop-types": "^15.7.2",
     "ps-node": "^0.1.6",
     "random-binary": "^1.0.3",
     "random-string": "^0.2.0",
-    "os-name": "4.0.0",
+    "react-csv": "^2.0.3",
     "uifx": "^2.0.7",
     "utf8": "^3.0.0"
   },
