--- a/webapp/package.json
+++ b/webapp/package.json
@@ -60,6 +60,7 @@
     "react-bootstrap-range-slider": "^2.0.2",
     "react-console-component": "^0.6.1",
     "react-copy-to-clipboard": "^5.0.3",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.1",
     "react-ellipsis-text": "1.2.1",
     "react-helmet": "^6.1.0",
