--- a/.github/workflows/release-builds.yml
+++ b/.github/workflows/release-builds.yml
@@ -2,12 +2,11 @@ on:
   release:
     types: [created]
 
+# TODO(fuxing): All external actions that are not maintained by an org or reputable individual to be removed.
+
 jobs:
   publish_linux_version:
     runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN}}
-
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
@@ -19,13 +18,13 @@ jobs:
 
       - name: Publish app
         run: npm run publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   create-linux-checksum:
     needs:
       - publish_linux_version
     runs-on: ubuntu-latest
-    env:
-      GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
@@ -58,17 +57,11 @@ jobs:
           asset_path: ./defi-app-${{ env.PACKAGE_VERSION}}.AppImage.SHA256
           asset_name: defi-app-${{ env.PACKAGE_VERSION}}.AppImage.SHA256
           asset_content_type: text/plain
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish_mac_version:
     runs-on: macos-latest
-    env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN}}
-      CSC_LINK: ${{ secrets.CSC_LINK}}
-      CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD}}
-      CI: true
-      APPLE_ID: ${{ secrets.APPLE_ID}}
-      APPLE_ID_PASS: ${{ secrets.APPLE_ID_PASS}}
-
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
@@ -80,13 +73,18 @@ jobs:
 
       - name: Publish app
         run: npm run publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CSC_LINK: ${{ secrets.CSC_LINK}}
+          CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD}}
+          CI: true
+          APPLE_ID: ${{ secrets.APPLE_ID}}
+          APPLE_ID_PASS: ${{ secrets.APPLE_ID_PASS}}
 
   create-mac-checksum:
     needs:
       - publish_mac_version
     runs-on: ubuntu-latest
-    env:
-      GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
@@ -119,12 +117,11 @@ jobs:
           asset_path: ./defi-app-${{ env.PACKAGE_VERSION}}.dmg.SHA256
           asset_name: defi-app-${{ env.PACKAGE_VERSION}}.dmg.SHA256
           asset_content_type: text/plain
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish_windows_version:
     runs-on: windows-latest
-    env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN}}
-
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
@@ -136,13 +133,13 @@ jobs:
 
       - name: Publish app
         run: npm run publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   create-windows-checksum:
     needs:
       - publish_windows_version
     runs-on: ubuntu-latest
-    env:
-      GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
     steps:
       - uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
@@ -175,3 +172,5 @@ jobs:
           asset_path: ./defi-app-Setup-${{ env.PACKAGE_VERSION}}.exe.SHA256
           asset_name: defi-app-Setup-${{ env.PACKAGE_VERSION}}.exe.SHA256
           asset_content_type: text/plain
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
