--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "bip32": "^2.0.6",
     "bip39": "^3.0.3",
     "bitcoinjs-lib": "^5.2.0",
-    "commander": "^7.0.0",
+    "commander": "^7.1.0",
     "crypto-js": "^4.0.0",
     "d3-fetch": "^2.0.0",
     "d3-scale": "^3.2.3",
@@ -80,17 +80,17 @@
     "utf8": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.16",
     "@electron/typescript-definitions": "^8.8.0",
     "@types/auto-launch": "^5.0.1",
     "@types/base-64": "^0.1.3",
     "@types/crypto-js": "^4.0.1",
     "@types/ini": "^1.3.30",
-    "@types/node": "^12.19.16",
+    "@types/node": "^12.20.1",
     "@types/random-string": "0.0.28",
     "@types/utf8": "^2.1.6",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "@uqt/ts-path-replace": "1.1.1",
     "babel-preset-env": "^1.7.0",
     "concurrently": "5.3.0",
@@ -99,7 +99,7 @@
     "electron-builder": "^22.9.1",
     "electron-devtools-installer": "^3.1.1",
     "electron-notarize": "1.0.0",
-    "eslint": "^7.19.0",
+    "eslint": "^7.20.0",
     "file-loader": "^6.2.0",
     "husky": "^4.3.8",
     "install": "^0.13.0",
@@ -108,7 +108,7 @@
     "npm": "^6.14.11",
     "prettier": "^2.2.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.1.4"
+    "typescript": "^4.1.5"
   },
   "build": {
     "productName": "defi-app",
@@ -120,14 +120,18 @@
       {
         "from": "./webapp/build/release/",
         "to": "./webapp",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "extraResources": [
       {
         "from": "./binary/",
         "to": "./binary",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "icon": "electron-app/assets/icon/icon-512.png",
@@ -147,7 +151,9 @@
       ]
     },
     "linux": {
-      "target": ["AppImage"]
+      "target": [
+        "AppImage"
+      ]
     },
     "win": {
       "target": "NSIS"
