--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,12 +30,12 @@
     }
   },
   "dependencies": {
-    "@storybook/addon-actions": "^6.1.17",
-    "@storybook/addon-docs": "^6.1.17",
-    "@storybook/addon-links": "^6.1.17",
-    "@storybook/addons": "^6.1.17",
-    "@storybook/react": "^6.1.17",
-    "ajv": "^7.0.4",
+    "@storybook/addon-actions": "^6.1.18",
+    "@storybook/addon-docs": "^6.1.18",
+    "@storybook/addon-links": "^6.1.18",
+    "@storybook/addons": "^6.1.18",
+    "@storybook/react": "^6.1.18",
+    "ajv": "^7.1.0",
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
@@ -55,8 +55,8 @@
     "qrcode.react": "^1.0.1",
     "random-binary": "^1.0.3",
     "react": "^17.0.1",
-    "react-avatar": "^3.9.7",
-    "react-bootstrap": "^1.4.3",
+    "react-avatar": "^3.10.0",
+    "react-bootstrap": "^1.5.0",
     "react-bootstrap-range-slider": "^2.0.2",
     "react-console-component": "^0.6.1",
     "react-copy-to-clipboard": "^5.0.3",
@@ -82,7 +82,7 @@
     "uifx": "^2.0.7"
   },
   "devDependencies": {
-    "@babel/core": "~7.12.13",
+    "@babel/core": "~7.12.16",
     "@babel/plugin-proposal-class-properties": "~7.12.13",
     "@babel/plugin-proposal-export-default-from": "^7.12.13",
     "@babel/plugin-proposal-export-namespace-from": "~7.12.13",
@@ -90,7 +90,7 @@
     "@babel/plugin-proposal-throw-expressions": "~7.12.13",
     "@babel/plugin-syntax-dynamic-import": "~7.8.3",
     "@babel/plugin-transform-runtime": "~7.12.15",
-    "@babel/preset-env": "~7.12.13",
+    "@babel/preset-env": "~7.12.16",
     "@babel/preset-react": "~7.12.13",
     "@babel/register": "~7.12.13",
     "@pmmmwh/react-refresh-webpack-plugin": "~0.4.3",
@@ -100,9 +100,9 @@
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.1",
+    "@types/react": "^17.0.2",
     "@types/react-copy-to-clipboard": "^5.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^17.0.1",
     "@types/react-helmet": "^6.1.0",
     "@types/react-qr-reader": "^2.1.3",
     "@types/react-redux": "^7.1.16",
@@ -125,7 +125,7 @@
     "cssnano": "~4.1.10",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
-    "eslint": "^7.19.0",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "~14.2.1",
     "eslint-config-airbnb-typescript": "~12.3.1",
     "eslint-config-prettier": "~7.2.0",
@@ -134,11 +134,11 @@
     "eslint-plugin-jsx-a11y": "~6.4.1",
     "eslint-plugin-react": "~7.22.0",
     "eslint-plugin-react-hooks": "~4.2.0",
-    "eslint-webpack-plugin": "~2.5.0",
+    "eslint-webpack-plugin": "~2.5.1",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "~6.1.0",
     "html-loader": "~1.3.2",
-    "html-webpack-plugin": "~5.0.0-beta.6",
+    "html-webpack-plugin": "~5.1.0",
     "image-minimizer-webpack-plugin": "2.2.0",
     "imagemin-jpegtran": "7.0.0",
     "imagemin-optipng": "8.0.0",
@@ -146,11 +146,11 @@
     "import-sort-style-module-and-prefix": "~0.1.3",
     "install": "^0.13.0",
     "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.3.6",
+    "mini-css-extract-plugin": "^1.3.7",
     "npm": "^6.14.11",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "path": "~0.12.7",
-    "postcss": "8.2.5",
+    "postcss": "8.2.6",
     "postcss-loader": "^5.0.0",
     "prettier": "^2.2.1",
     "process": "0.11.10",
@@ -164,11 +164,11 @@
     "style-loader": "~2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "^26.5.1",
-    "ts-loader": "^8.0.16",
+    "ts-loader": "^8.0.17",
     "tsconfig-paths-webpack-plugin": "3.3.0",
-    "typescript": "^4.1.4",
+    "typescript": "^4.1.5",
     "url-loader": "^4.1.1",
-    "webpack": "5.21.2",
+    "webpack": "5.22.0",
     "webpack-bundle-analyzer": "~4.4.0",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "^3.11.2",
