Run dev-builds only on PR to reduce concurrency cap due to increased GH Actions usage (#524)
Co-authored-by: Ahmed Hilali <monstrobishi@gmail.com>

--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -1,11 +1,6 @@
 on:
-  push:
-    branches:
-      - 'ci/**'
-      - master
   pull_request:
-    branches:
-      - master
+    branches: [master]
 
 jobs:
   build_linux_version:
