--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ps-node": "^0.1.6",
     "random-binary": "^1.0.3",
     "random-string": "^0.2.0",
+    "semver": "7.3.4",
     "uifx": "^2.0.7",
     "utf8": "^3.0.0"
   },
@@ -87,6 +88,7 @@
     "@types/ini": "^1.3.30",
     "@types/node": "^12.20.4",
     "@types/random-string": "0.0.28",
+    "@types/semver": "7.3.4",
     "@types/utf8": "^2.1.6",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
