Revert "build: update release type to draft (#533)" (#534)
This reverts commit 3d8a27d512d9a6bd2a40be0c9386d10e90ea3a73.

--- a/package.json
+++ b/package.json
@@ -164,7 +164,7 @@
       "provider": "github",
       "repo": "app",
       "owner": "DeFiCh",
-      "releaseType": "draft"
+      "releaseType": "prerelease"
     }
   },
   "lint-staged": {
