issue needs/triage comment updated to include community channels (#540)
* issue needs/triage comment updated to include community channels

* fix issues captures for os

* restricted kind label with author_association

* added a more lax regex for detecting os

--- a/.github/governance.yml
+++ b/.github/governance.yml
@@ -7,15 +7,15 @@ issue:
       ignore_case: true
       label: 'version/$CAPTURED'
 
-    - regex: '- Operating System (OS): *(windows|window|ms|win|wins|microsoft) *'
+    - regex: '- Operating System \(OS\): *(windows?|ms|wins?|microsoft).*'
       label: 'os/win'
       ignore_case: true
 
-    - regex: '- Operating System (OS): *(linux|linus|lin|unix|ubuntu|fedora|debian) *'
+    - regex: '- Operating System \(OS\): *(linux|linus|lin|unix|ubuntu|fedora|debian).*'
       label: 'os/linux'
       ignore_case: true
 
-    - regex: '- Operating System (OS): *(macos|mac|apple|macintosh|macbook) *'
+    - regex: '- Operating System \(OS\): *(macos|mac|apple|macintosh|macbook).*'
       label: 'os/mac'
       ignore_case: true
 
@@ -35,14 +35,19 @@ issue:
 
           In the meantime, you can:
 
-          1. Checkout [DeFiChain’s Github issue page](https://github.com/DeFiCh/app/issues) to see if your issue has already been reported
-          2. Checkout [how to an submit issue for DeFi app](https://github.com/DeFiCh/app/wiki/How-to-submit-issues-for-DeFi-app)
-          3. Submit any logs if you have them, this will greatly expedite the process for us.
+          1. Checkout [DeFiChain’s Github issue page](https://github.com/DeFiCh/app/issues?q=is%3Aissue) to see if your issue has already been reported
+          2. [Submit any logs if you have them](https://github.com/DeFiCh/app/wiki/How-to-submit-issues-for-DeFi-app), this will greatly expedite the process for us.
+          3. You can also join our [Telegram](https://t.me/defiblockchain) or [Reddit](https://reddit.com/r/defiblockchain) community channels.
 
     - prefix: kind
       list: ['feature', 'bug']
       multiple: false
       needs: true
+      author_association:
+        author: true
+        collaborator: true
+        member: true
+        owner: true
 
     - prefix: os
       list: ['mac', 'win', 'linux']
@@ -120,6 +125,11 @@ pull_request:
           description:
             success: Ready for review & merge.
             failure: Missing kind label for release generation.
+      author_association:
+        author: true
+        collaborator: true
+        member: true
+        owner: true
 
   chat_ops:
     - cmd: /close
