Masternode new ux (#507)
* Masternode new ux wip

* wip

* Desing fixes

* Made new design dynamic

* Made changes in design to make it dynamic

* Update defi.conf masternode creation changes

* Updated utils names

* Made changes in footer

* made CSS changes

* PR comments and improvements

* Fix: condition for conf update

Co-authored-by: JJ Adonis <josejaimecareers@gmail.com>

--- a/package.json
+++ b/package.json
@@ -122,18 +122,14 @@
       {
         "from": "./webapp/build/release/",
         "to": "./webapp",
-        "filter": [
-          "**/*"
-        ]
+        "filter": ["**/*"]
       }
     ],
     "extraResources": [
       {
         "from": "./binary/",
         "to": "./binary",
-        "filter": [
-          "**/*"
-        ]
+        "filter": ["**/*"]
       }
     ],
     "icon": "electron-app/assets/icon/icon-512.png",
@@ -153,9 +149,7 @@
       ]
     },
     "linux": {
-      "target": [
-        "AppImage"
-      ]
+      "target": ["AppImage"]
     },
     "win": {
       "target": "NSIS"
