feat: added warning file on installation folder (#643)
* fix: fixes for MN page

* feat: restructured defi configuration

* feat: off configs on exit wallet

* feat: display lock screen for MNs

* feat: unlock for max timeout

* feat: lock wallet warning

* feat: last changes for MN

* style: codacy fix

* feat: community wiki on help page

* merge

* feat: added warning on installer folder

* chore: added condition for mac

* chore: sample build for testing

* feat: add folder

* chore: style issue

* chore: revert changes

--- a/package.json
+++ b/package.json
@@ -130,6 +130,11 @@
         "from": "./binary/",
         "to": "./binary",
         "filter": ["**/*"]
+      },
+      {
+        "from": "./DO_NOT_SAVE_WALLETS_HERE",
+        "to": "../DO_NOT_SAVE_WALLETS_HERE",
+        "filter": ["**/*"]
       }
     ],
     "icon": "electron-app/assets/icon/icon-512.png",
