--- a/package.json
+++ b/package.json
@@ -159,6 +159,10 @@
     "win": {
       "target": "NSIS"
     },
+    "nsis": {
+      "allowToChangeInstallationDirectory": true,
+      "oneClick": false
+    },
     "publish": {
       "provider": "github",
       "repo": "app",
